# backend_chatbot_ibyma2

backend/: pyproject.toml  requirements.txt  run.py
backend/app/: .env  main.py  requirements.txt
backend/app/api/: analytics.py  chat.py  documents.py
backend/app/core/: config.py
backend/app/models/: chat.py  questionnaire.py
backend/app/services/: ai_service.py  chat_service.py  storage_service.py
backend/app/tests/: test_api.py
backend/app/utils/: logger.py
